Expand the whole filter well. Fixed margins for correct collapse instad of padding

--- a/monlog/static/less/monlog.less
+++ b/monlog/static/less/monlog.less
@@ -161,3 +161,17 @@ body {
         }
     }
 }
+
+.non-expanded {
+    min-height:0;
+    border:0;
+    margin:0;
+}
+
+.form-search {
+    padding:0;
+}
+
+#form-wrapper {
+    margin:19px;
+}
